httpserver/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gohttpserver
  labels:
    app.kubernetes.io/name: gohttpserver
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gohttpserver
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
